--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -1,16 +1,20 @@
 FROM node:20-slim AS build
 WORKDIR /app
 
-COPY apps/frontend/package*.json ./
+# Copy dependency manifests first
+COPY package*.json ./
 RUN npm install
 
-COPY apps/frontend ./
+# Copy source
+COPY . ./
 RUN npm run build
 
+# Serve built site
 FROM node:20-slim
 WORKDIR /app
+
 COPY --from=build /app/dist ./dist
-COPY apps/frontend/package*.json ./
+COPY package*.json ./
 RUN npm install --omit=dev
 
 EXPOSE 4173
