--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "vite": "^7.1.6"
   },
   "devDependencies": {
-    "@types/react": "^19.1.13"
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9"
   }
 }
