--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -15,5 +15,4 @@ RUN npm install -g serve
 COPY --from=build /app/dist ./dist
 
 # Railway injects $PORT, so bind to it
-CMD ["serve", "-s", "dist", "-l", "$PORT", "--single"]
-
+CMD serve -s dist -l $PORT --single
