--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "name": "cactus-makes-perfect-frontend",
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -9,6 +15,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9"
+    "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
