--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm install
 COPY . ./
 RUN npm run build
 
-# Runtime image: use a tiny static server
+# Runtime image
 FROM node:20-slim
 WORKDIR /app
 
@@ -15,5 +15,5 @@ RUN npm install -g serve
 COPY --from=build /app/dist ./dist
 
 # Railway injects $PORT, so bind to it
-# Shell form allows $PORT to expand properly
-CMD sh -c "serve -s dist -l $PORT -u guest:secretpass"
+# Make sure only one path argument (./dist) is given
+CMD sh -c "serve -s ./dist -l $PORT -u guest:secretpass"
