--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^7.1.6"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3"
