--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
+    "@supabase/supabase-js": "^2.58.0",
     "@vitejs/plugin-react": "^5.0.3",
     "basic-auth": "^2.0.1",
     "express": "^5.1.0",
     "framer-motion": "^12.23.16",
+    "jose": "^6.1.0",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "twilio": "^5.10.1",
+    "uuid": "^13.0.0",
     "vite": "^7.1.6"
   },
   "devDependencies": {
