--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -17,6 +17,5 @@ RUN npm run build
 FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=build /app/dist ./
-
-EXPOSE 80
+COPY nginx.conf /etc/nginx/nginx.conf
 CMD ["nginx", "-g", "daemon off;"]
