--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -11,15 +11,11 @@ COPY . ./
 ARG VITE_SHOW_RESET_BUTTON
 ENV VITE_SHOW_RESET_BUTTON=$VITE_SHOW_RESET_BUTTON
 
-# ---- Runtime stage ----
 FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 
-# Copy built static files
 COPY --from=build /app/dist ./
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy nginx template config
-COPY nginx.conf.template /etc/nginx/conf.d/default.conf.template
-
-# On startup, substitute $PORT into the template and launch nginx
-CMD ["/bin/sh", "-c", "envsubst < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
