--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,9 +1,9 @@
 # ---- Build frontend ----
 FROM node:20-slim AS fe
 WORKDIR /fe
-COPY ../frontend/package*.json ./
+COPY apps/frontend/package*.json ./
 RUN npm install
-COPY ../frontend ./
+COPY apps/frontend ./
 RUN npm run build
 
 # ---- Backend runtime ----
@@ -11,11 +11,11 @@ FROM node:20-slim
 WORKDIR /app
 
 # Backend deps
-COPY ./package*.json ./
+COPY apps/backend/package*.json ./
 RUN npm install --omit=dev
 
 # Backend source
-COPY . .
+COPY apps/backend ./
 
 # Bring frontend build into /app/dist
 COPY --from=fe /fe/dist ./dist
