--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,11 +5,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "7.7.0",
+    "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "2.58.0",
     "basic-auth": "2.0.1",
-    "express": "4.19.2",
+    "express": "^4.21.2",
     "jose": "4.15.5",
+    "node-fetch": "^3.3.2",
     "nodemailer": "6.9.13",
     "twilio": "4.22.0",
     "uuid": "9.0.1"
