adding admin routes and guest routes

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ TWILIO_FROM=+1xxx
 # Basic auth (already used by your dev server)
 BASIC_AUTH_USER=guest
 BASIC_AUTH_PASS=secretpass
+
+ADMIN_SECRET=03aZ7!xQ8Lz9YpX    
+ADMIN_JWT_TTL_HOURS=8
