--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,10 +8,12 @@
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "2.58.0",
     "basic-auth": "2.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jose": "4.15.5",
     "node-fetch": "^3.3.2",
-    "nodemailer": "6.9.13",
+    "nodemailer": "^7.0.10",
     "twilio": "4.22.0",
     "uuid": "9.0.1"
   }
