--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^7.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
