--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.58.0",
     "@vitejs/plugin-react": "^5.0.3",
