--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^9.100.0",
+    "@react-three/fiber": "^8.16.0",
+    "@react-three/postprocessing": "^2.16.3",
+    "@types/three": "^0.160.0",
+    "@use-gesture/react": "^10.3.1",
     "basic-auth": "^2.0.1",
     "express": "^5.1.0",
-    "framer-motion": "^12.23.16",
+    "framer-motion": "^12.34.0",
+    "postprocessing": "^6.38.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "three": "^0.160.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
