--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.58.0",
     "@vitejs/plugin-react": "^5.0.3",
@@ -21,6 +24,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "three": "^0.182.0",
     "twilio": "^5.10.1",
     "uuid": "^13.0.0",
     "vite": "^7.1.6"
